--- a/index.html
+++ b/index.html
@@ -19,15 +19,15 @@
 
 <body>
 
-    <section>
-        <div class="half-width">
+    <section class="top-banner">
+        <div class="half-width top-mergin">
             <h2>Hi,,, I'm</h2>
             <h1 class="orange-color">Rakib Ahmed</h1>
             <h3>Professional WordPress Developer!!!</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rakib-ahmed-3603461a6/">Hire Me</a>
         </div>
-        <div class="half-width">
+        <div class="half-width top-mergin">
             <img src="img/rakib-img.png" alt="Rakib Ahmed">
         </div>
     </section>
