about me section done

--- a/index.html
+++ b/index.html
@@ -25,10 +25,25 @@
             <h1 class="orange-color">Rakib Ahmed</h1>
             <h3>Professional WordPress Developer!!!</h3>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley</p>
-            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rakib-ahmed-3603461a6/">Hire Me</a>
+            <a class="link-button" target="_blank" href="https://www.linkedin.com/in/rakib-ahmed-3603461a6/">HIRE ME</a>
         </div>
         <div class="half-width top-mergin">
             <img src="img/rakib-img.png" alt="Rakib Ahmed">
+        </div>
+    </section>
+
+    <section class="dream-big">
+        <div class="half-width">
+            <img src="img/another-img.png" alt="rakib ahmed">
+        </div>
+        <div class="half-width">
+            <h2>About Me</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, in. Nostrum earum dolores suscipit repellat consectetur sequi distinctio, cupiditate nulla dignissimos, fugiat atque rem esse sunt! Unde numquam perferendis voluptate. Placeat
+                neque, qui in voluptatibus ab sit consectetur autem maiores aspernatur cupiditate corrupti necessitatibus sunt natus sapiente iure libero delectus! Nesciunt, fugit voluptatem ducimus voluptate delectus cupiditate dolorum qui magnam laudantium
+                dolore consequuntur tenetur rem perferendis error quasi, nemo laboriosam officiis. Nisi ipsum eaque natus illo ab vero laboriosam in cum, numquam repellat recusandae, eius minima deserunt veritatis! Vero fugiat aliquid sapiente harum ut
+                ea. Sit atque quos unde et!</p>
+            <a class="link-button" target="_blank" href="#">DOWNLOAD RESUME</a>
+
         </div>
     </section>
 
