full website done

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
 
-    <section class="top-banner">
+    <section class="top-banner flexible-container">
         <div class="half-width top-mergin">
             <h2>Hi,,, I'm</h2>
             <h1 class="orange-color">Rakib Ahmed</h1>
@@ -32,12 +32,13 @@
         </div>
     </section>
 
-    <section class="dream-big">
+    <section class="dream-big flexible-container">
         <div class="half-width">
-            <img src="img/another-img.png" alt="rakib ahmed">
+            <img class="about-image" src="img/about.jpg" alt="rakib ahmed">
         </div>
         <div class="half-width">
             <h2>About Me</h2>
+            <hr class="about-hr">
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam, in. Nostrum earum dolores suscipit repellat consectetur sequi distinctio, cupiditate nulla dignissimos, fugiat atque rem esse sunt! Unde numquam perferendis voluptate. Placeat
                 neque, qui in voluptatibus ab sit consectetur autem maiores aspernatur cupiditate corrupti necessitatibus sunt natus sapiente iure libero delectus! Nesciunt, fugit voluptatem ducimus voluptate delectus cupiditate dolorum qui magnam laudantium
                 dolore consequuntur tenetur rem perferendis error quasi, nemo laboriosam officiis. Nisi ipsum eaque natus illo ab vero laboriosam in cum, numquam repellat recusandae, eius minima deserunt veritatis! Vero fugiat aliquid sapiente harum ut
@@ -46,6 +47,29 @@
 
         </div>
     </section>
+
+    <section id class="experience-area">
+        <h2 class="experience-title">Experiences</h2>
+        <hr>
+        <div class="flexible-container">
+            <div id="web-dev-experience" class="experience-item">
+                <h2>WordPress Developer</h2>
+                <h4>2019 to Present | Pro Level Developer</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque sit beatae laudantium voluptas doloremque magnam, culpa illo impedit est maxime eos et sequi? Quaerat praesentium eius, aperiam optio atque sapiente aut aliquam voluptatem
+                    impedit ducimus fugit. Qui, vero omnis? Cumque, ad quod quo mollitia minus molestias eaque eius molestiae sunt?</p>
+            </div>
+            <div id="web-dev-experience" class="experience-item">
+                <h2>Front-end Web Developer</h2>
+                <h4>2021 to Present | Programming Hero Learner</h4>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perferendis praesentium blanditiis officia fugit sed a, rerum aperiam earum obcaecati dolorem consequatur, hic dolores provident. Suscipit corrupti delectus fugit, dolorum cupiditate
+                    inventore tempora aut quae reprehenderit, voluptatum, modi pariatur id! Illum praesentium sint numquam ex, sunt laudantium delectus? Numquam, cumque magnam.</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p class="footer-text"> Copyright Ⓒ 2022 | All Right Reserved |</p>
+    </footer>
 
 </body>
 
